[gd_scene load_steps=61 format=3 uid="uid://3cawy8knycih"]

[ext_resource type="Script" path="res://player/player.gd" id="1_os7xu"]
[ext_resource type="Texture2D" uid="uid://bsrrmfb7vov6h" path="res://art/spritesheets/player_idle.png" id="2_d16vo"]
[ext_resource type="Texture2D" uid="uid://drb4q23xyrdc7" path="res://art/spritesheets/player_fall.png" id="2_i3mrj"]
[ext_resource type="Texture2D" uid="uid://1ubdnqqcjyrd" path="res://art/spritesheets/player_jump.png" id="4_mxefs"]
[ext_resource type="Texture2D" uid="uid://cq6buatqcurh3" path="res://art/spritesheets/player_run.png" id="5_2al53"]
[ext_resource type="Texture2D" uid="uid://bk2ofxi8yob0b" path="res://art/spritesheets/player/player_run.png" id="6_pnmx4"]
[ext_resource type="AudioStream" uid="uid://crdci21sk43pg" path="res://audio/jump.wav" id="7_ffk1j"]
[ext_resource type="AudioStream" uid="uid://hlh66smpo268" path="res://audio/jump_second.wav" id="8_h5vkb"]
[ext_resource type="AudioStream" uid="uid://ccrbn31mhlgt5" path="res://audio/jump_super.wav" id="9_hr5nn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kee2e"]
radius = 5.0
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tvq4s"]
atlas = ExtResource("2_i3mrj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_01le5"]
atlas = ExtResource("2_i3mrj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1p4f"]
atlas = ExtResource("2_i3mrj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vko2"]
atlas = ExtResource("2_d16vo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiblj"]
atlas = ExtResource("2_d16vo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8uwo"]
atlas = ExtResource("2_d16vo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg4j1"]
atlas = ExtResource("2_d16vo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3lqo"]
atlas = ExtResource("2_d16vo")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hwio"]
atlas = ExtResource("2_d16vo")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wvd4"]
atlas = ExtResource("2_d16vo")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kujo"]
atlas = ExtResource("2_d16vo")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fa1c"]
atlas = ExtResource("2_d16vo")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrtvt"]
atlas = ExtResource("2_d16vo")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsd68"]
atlas = ExtResource("2_d16vo")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp4ra"]
atlas = ExtResource("2_d16vo")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_grrym"]
atlas = ExtResource("2_d16vo")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl4ca"]
atlas = ExtResource("2_d16vo")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyplu"]
atlas = ExtResource("2_d16vo")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_atbfm"]
atlas = ExtResource("2_d16vo")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_123j4"]
atlas = ExtResource("2_d16vo")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhrbb"]
atlas = ExtResource("2_d16vo")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_30bde"]
atlas = ExtResource("2_d16vo")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdg7n"]
atlas = ExtResource("2_d16vo")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghw4s"]
atlas = ExtResource("4_mxefs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_71bl2"]
atlas = ExtResource("4_mxefs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlp3i"]
atlas = ExtResource("4_mxefs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3o0h"]
atlas = ExtResource("5_2al53")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijila"]
atlas = ExtResource("5_2al53")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7ady"]
atlas = ExtResource("5_2al53")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1v0p"]
atlas = ExtResource("5_2al53")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_stgjr"]
atlas = ExtResource("5_2al53")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4mqt"]
atlas = ExtResource("5_2al53")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j5es"]
atlas = ExtResource("5_2al53")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dlox"]
atlas = ExtResource("5_2al53")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rm6u"]
atlas = ExtResource("6_pnmx4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_64orn"]
atlas = ExtResource("6_pnmx4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qx0d5"]
atlas = ExtResource("6_pnmx4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tucr3"]
atlas = ExtResource("6_pnmx4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqefx"]
atlas = ExtResource("6_pnmx4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k13ac"]
atlas = ExtResource("6_pnmx4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyae4"]
atlas = ExtResource("6_pnmx4")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3536i"]
atlas = ExtResource("6_pnmx4")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_admhu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvq4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01le5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1p4f")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vko2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiblj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8uwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg4j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3lqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hwio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wvd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kujo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fa1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrtvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsd68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp4ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grrym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl4ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyplu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atbfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_123j4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhrbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30bde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdg7n")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghw4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71bl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlp3i")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3o0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijila")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7ady")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1v0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stgjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4mqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j5es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dlox")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rm6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64orn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx0d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tucr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqefx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k13ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyae4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3536i")
}],
"loop": true,
"name": &"Sneak",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_hwkpl"]
resource_name = "Fall"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_tqdb0"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_6pgte"]
resource_name = "Jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"Jump", &"Sneak"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_7gkho"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Sneak"]
}

[sub_resource type="Animation" id="Animation_okpqb"]
resource_name = "Run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_jrinb"]
resource_name = "Sneak"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Sneak"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x0g55"]
_data = {
"Fall": SubResource("Animation_hwkpl"),
"Idle": SubResource("Animation_tqdb0"),
"Jump": SubResource("Animation_6pgte"),
"RESET": SubResource("Animation_7gkho"),
"Run": SubResource("Animation_okpqb"),
"Sneak": SubResource("Animation_jrinb")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_os7xu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_kee2e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_admhu")
animation = &"Sneak"
frame = 1
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_bottom = 756
drag_vertical_enabled = true
drag_top_margin = 0.5
drag_bottom_margin = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_x0g55")
}

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ffk1j")

[node name="JumpSecondSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_h5vkb")

[node name="JumpSuperSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_hr5nn")
